--- a/sample/src/main/res/layout/external_stakeholder.xml
+++ b/sample/src/main/res/layout/external_stakeholder.xml
@@ -1,53 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-     <android.support.v7.widget.CardView
-    android:id="@+id/card1"
-    android:layout_width="200dp"
-    android:layout_height="100dp"
+<android.support.v7.widget.CardView android:id="@+id/card1"
+    android:layout_width="180dp"
+    android:layout_height="wrap_content"
     android:layout_below="@+id/html_text"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="10dp"
-    android:layout_centerHorizontal="true">
-    <RelativeLayout
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
+    android:elevation="4dp"
+    android:layout_centerHorizontal="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        >
         <ImageView
             android:id="@+id/user_image"
             android:src="@drawable/male_circlesmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             />
-        <TextView
-            android:layout_toRightOf="@+id/user_image"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/emp_name"
-            android:text="Name"
-            android:layout_marginLeft="10dp"/>
-        <TextView
-            android:id="@+id/emp_design"
-            android:text="Designation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/user_image"
+            android:orientation="vertical"
             android:layout_marginLeft="10dp"
-            android:layout_below="@+id/emp_name"
-            android:layout_marginTop="10dp"/>
-        <TextView
-            android:layout_toRightOf="@+id/user_image"
-            android:id="@+id/ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="ID:22"
-            android:textStyle="bold"
-            android:layout_below="@+id/emp_design"
-            android:layout_marginTop="10dp"/>
-    </RelativeLayout>
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/emp_name"
+                android:text="Demo"
+                android:padding="2dp"
+                />
+            <TextView
+                android:id="@+id/emp_design"
+                android:text="dgshfj"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:layout_marginTop="5dp"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
-</RelativeLayout>
