--- a/sample/src/main/res/layout/internal_employees.xml
+++ b/sample/src/main/res/layout/internal_employees.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <android.support.v7.widget.CardView
         android:id="@+id/card2"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_below="@+id/card1"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true">
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="ID:"
+                android:text=""
                 android:textStyle="bold"
                 android:layout_below="@+id/emp_name2"
                 android:layout_marginTop="10dp"/>
