--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="project_color">#ffffff</color>
     <color name="text_color">#436086</color>
     <color name="text_color_gray">#3c4650</color>
-    <color name="gray">#d9d9d9</color>
+    <color name="gray">#f2f0f0</color>
     <color name="black">#000000</color>
     <color name="pink">#f97bf5</color>
     <color name="dark_clr">#333333</color>
