--- a/sample/src/main/res/layout/external_stakeholder.xml
+++ b/sample/src/main/res/layout/external_stakeholder.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/card1"
+<android.support.v7.widget.CardView
+    android:id="@+id/card1"
     android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_below="@+id/html_text"
