--- a/sample/src/main/res/layout/internal_employees.xml
+++ b/sample/src/main/res/layout/internal_employees.xml
@@ -1,47 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card2"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/user_image_female"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/femalesmall"/>
+<android.support.v7.widget.CardView
+    android:id="@+id/card2"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="10dp"
+    android:elevation="10dp"
+    android:layout_centerHorizontal="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        >
+        <ImageView
+            android:id="@+id/user_image_female"
+            android:src="@drawable/femalesmall"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            />
+
+
             <TextView
-                android:layout_toRightOf="@+id/user_image_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/emp_name2"
+                android:id="@+id/firstName"
                 android:text="Name"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginTop="0dp"
+                android:layout_marginLeft="10dp"
+                android:padding="2dp"
+                android:layout_toRightOf="@+id/user_image_female"
+                />
+            <TextView
+                android:id="@+id/id"
+                android:layout_toRightOf="@id/user_image_female"
+                android:text="ID:"
+                android:layout_marginLeft="10dp"
+                android:layout_below="@+id/firstName"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                />
 
             <TextView
-                android:layout_toRightOf="@+id/user_image_female"
-                android:id="@+id/ID2"
+                android:id="@+id/id_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text=""
-                android:textStyle="bold"
-                android:layout_below="@+id/emp_name2"
-                android:layout_marginTop="10dp"/>
-        </RelativeLayout>
+                android:layout_toRightOf="@+id/id"
+                android:layout_below="@+id/firstName"
+                android:layout_marginLeft="5dp"
+                android:padding="2dp"
+                />
 
 
-    </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 
+</android.support.v7.widget.CardView>
 
-</RelativeLayout>
+
